--- a/DungeonCrawler2.csproj
+++ b/DungeonCrawler2.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encounter1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Encounter1.Designer.cs">
+      <DependentUpon>Encounter1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
