--- a/DungeonCrawler2.csproj
+++ b/DungeonCrawler2.csproj
@@ -72,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YoureDead.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="YoureDead.Designer.cs">
+      <DependentUpon>YoureDead.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Encounter1.resx">
       <DependentUpon>Encounter1.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,6 +96,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="YoureDead.resx">
+      <DependentUpon>YoureDead.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
