Added DMCA free background music to form. Set inside Resources

--- a/DungeonCrawler2.csproj
+++ b/DungeonCrawler2.csproj
@@ -198,5 +198,8 @@
   <ItemGroup>
     <None Include="Resources\strahdcastle.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\dark_castle.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
